LPS-77699 Update Translations

--- a/modules/private/apps/portal-security-audit/portal-security-audit-event-generators/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/private/apps/portal-security-audit/portal-security-audit-event-generators/src/main/resources/content/Language_pt_BR.properties
@@ -2,5 +2,5 @@ action.ADD=Adicionar
 action.ASSIGN=Atribuir
 action.LOGIN=Acesso
 action.LOGIN_FAILURE=Falha no Acesso
-action.LOGOUT=Logout
+action.LOGOUT=Finalizar sessão
 action.UNASSIGN=Cancelar
