--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ca.properties
@@ -1,9 +1,9 @@
-a-duration-time-is-required=Cal un temps de durada. (Automatic Translation)
-a-name-is-required=Cal un nom. (Automatic Translation)
-an-sla-with-the-same-name-already-exists=Ja existeix un SLA amb el mateix nom. (Automatic Translation)
+a-duration-time-is-required=Cal especificar una durada.
+a-name-is-required=Cal un nom.
+an-sla-with-the-same-name-already-exists=Ja existeix un SLA amb el mateix nom.
 entries=Entrades
 items=Elements
-metrics=Mètriques (Automatic Translation)
+metrics=Analítica web
 next=Següent
 no-current-metrics=No hi ha analítica actual
 no-results-were-found=No s'ha trobat cap resultat.
