--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_fi.properties
@@ -1,9 +1,9 @@
-a-duration-time-is-required=A duration time is required. (Automatic Copy)
-a-name-is-required=A name is required. (Automatic Copy)
-an-sla-with-the-same-name-already-exists=An SLA with the same name already exists. (Automatic Copy)
+a-duration-time-is-required=Kestoaika on pakollinen.
+a-name-is-required=Nimi on pakollinen.
+an-sla-with-the-same-name-already-exists=Saman niminen SLA on jo olemassa.
 entries=Merkintää
 items=Tuotteet
-metrics=Metrics (Automatic Copy)
+metrics=Metriikat
 next=Seuraava
 no-current-metrics=Ei Nykyisiä Metriikoita
 no-results-were-found=Tuloksia ei löytynyt.
