--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ja.properties
@@ -1,9 +1,9 @@
-a-duration-time-is-required=A duration time is required. (Automatic Copy)
-a-name-is-required=A name is required. (Automatic Copy)
-an-sla-with-the-same-name-already-exists=An SLA with the same name already exists. (Automatic Copy)
+a-duration-time-is-required=持続時間は必須です。
+a-name-is-required=名前は必須です。
+an-sla-with-the-same-name-already-exists=同じ名前のSLAがすでに存在します。
 entries=エントリー
 items=商品
-metrics=Metrics (Automatic Copy)
+metrics=統計情報
 next=次へ
 no-current-metrics=最新統計情報はありません
 no-results-were-found=結果が見つかりません
