--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_nl.properties
@@ -1,9 +1,9 @@
-a-duration-time-is-required=A duration time is required. (Automatic Copy)
-a-name-is-required=A name is required. (Automatic Copy)
-an-sla-with-the-same-name-already-exists=An SLA with the same name already exists. (Automatic Copy)
+a-duration-time-is-required=Een duur is verplicht.
+a-name-is-required=Een naam is verplicht.
+an-sla-with-the-same-name-already-exists=Er bestaat al een SLA met dezelfde naam.
 entries=Invoer
 items=Items
-metrics=Metrics (Automatic Copy)
+metrics=Meetwaarden
 next=Volgende
 no-current-metrics=Geen huidige meetwaarden
 no-results-were-found=Geen resultaten gevonden.
@@ -17,5 +17,5 @@ search-for=Zoeken naar ...
 showing=Weergave
 showing-x-to-x-of-x-entries=Weergave van {0} tot {1} van {2} invoeren.
 total-open=Totaal open
-x-item={0} Item (Automatic Copy)
-x-items={0} Items (Automatic Copy)
+x-item={0} item
+x-items={0} items
