--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_sv.properties
@@ -1,9 +1,9 @@
-a-duration-time-is-required=A duration time is required. (Automatic Copy)
-a-name-is-required=A name is required. (Automatic Copy)
-an-sla-with-the-same-name-already-exists=An SLA with the same name already exists. (Automatic Copy)
+a-duration-time-is-required=Varaktighet krävs.
+a-name-is-required=Ett namn krävs.
+an-sla-with-the-same-name-already-exists=Det finns redan en SLA med det namnet.
 entries=Poster
 items=Föremål
-metrics=Metrics (Automatic Copy)
+metrics=Mätvärden
 next=Nästa
 no-current-metrics=Inga nuvarande mätvärden
 no-results-were-found=Inga resultat hittades.
