--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_zh_CN.properties
@@ -1,21 +1,21 @@
-a-duration-time-is-required=持续时间是必需的。 (Automatic Translation)
-a-name-is-required=名称是必需的。 (Automatic Translation)
-an-sla-with-the-same-name-already-exists=具有相同名称的 sla 已存在。 (Automatic Translation)
-entries=条目 (Automatic Translation)
-items=项目 (Automatic Translation)
-metrics=指标 (Automatic Translation)
-next=下 (Automatic Translation)
-no-current-metrics=没有当前指标 (Automatic Translation)
-no-results-were-found=未找到任何结果。 (Automatic Translation)
-on-time=准时 (Automatic Translation)
-once-there-are-active-processes-metrics-will-appear-here=一旦有了活动进程, 指标就会出现在这里。 (Automatic Translation)
-open-processes-summary=打开进程摘要 (Automatic Translation)
-overdue=过期 (Automatic Translation)
-previous=以前 (Automatic Translation)
-process-name=进程名称 (Automatic Translation)
-search-for=搜索..。 (Automatic Translation)
-showing=显示 (Automatic Translation)
-showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
-total-open=开盘总冠军 (Automatic Translation)
-x-item={0} Item (Automatic Copy)
-x-items={0} Items (Automatic Copy)
+a-duration-time-is-required=持续时间为必填项。
+a-name-is-required=名称为必填项。
+an-sla-with-the-same-name-already-exists=已存在名称相同的服务水平协议。
+entries=条目
+items=项
+metrics=指标
+next=下一个
+no-current-metrics=没有当前指标
+no-results-were-found=未找到结果。
+on-time=按时
+once-there-are-active-processes-metrics-will-appear-here=一旦存在活动进程，指标就会显示在这里。
+open-processes-summary=打开进程汇总
+overdue=过期
+previous=上一个
+process-name=进程名称
+search-for=搜索…
+showing=正在显示
+showing-x-to-x-of-x-entries=正在显示第 {0} - {1} 个条目，共 {2} 个。
+total-open=打开总计
+x-item={0} 项
+x-items={0} 项
