--- a/modules/private/apps/saml/saml-api/src/main/resources/content/Language_ja.properties
+++ b/modules/private/apps/saml/saml-api/src/main/resources/content/Language_ja.properties
@@ -21,7 +21,7 @@ saml-key-store-password=キーストアのパスワード
 saml-key-store-path=キーストアのパス
 saml-key-store-path-description=ファイルシステム上のキーストアへのパス。ファイルシステムのキーストアマネージャーを使用する場合にのみ適用されます。
 saml-key-store-type=キーストアの種類
-saml-keystore-credential-password=キーストア・クレデンシャル・パスワード
+saml-keystore-credential-password=キーストア認証情報のパスワード
 saml-keystore-credential-password-description=キーストア内のエントリの保護に使用されるパスワード
 saml-keystore-manager-configuration-name=SAML KeyStoreManager インプリメンテーション設定
 saml-keystore-manager-description=キーストアの保存およびアクセス方法の定義
