--- a/modules/private/apps/saml/saml-web/src/main/resources/content/Language_ca.properties
+++ b/modules/private/apps/saml/saml-web/src/main/resources/content/Language_ca.properties
@@ -1,6 +1,6 @@
 add-identity-provider=Afegeix proveïdor d'identitat
 add-service-provider=Afegeix proveïdor de serveis
-are-you-sure-you-want-to-delete-this-certificate-from-the-keystore=Esteu segur que voleu suprimir aquest certificat de la keystore? (Automatic Translation)
+are-you-sure-you-want-to-delete-this-certificate-from-the-keystore=Segur que voleu suprimir aquest certificat del keystore?
 assertion-lifetime=Durada de l'asserció
 assertion-lifetime-help=Introduïu la durada de l'asserció en segons.
 attribute-mapping=Mapatge d'atributs
@@ -20,11 +20,11 @@ certificate-needs-auth=Ja hi ha una credencial amb un àlies coincident al keyst
 certificate-url=URL del certificat
 common-name=Nom comú
 create-certificate=Creeu un certificat
-delete-certificate=Suprimir el certificat (Automatic Translation)
+delete-certificate=Suprimeix el certificat
 download-certificate=Baixa el certificat
 dsa=DSA
 encrypted=Xifrat
-encryption-certificate-and-private-key=Certificat de xifratge i clau privada (Automatic Translation)
+encryption-certificate-and-private-key=Certificat de xifrat i clau privada
 entity=Entitat
 entity-id-help=L'ID de l'entitat és un identificador únic que pot tenir fins a 1024 caràcters.
 entity-id-must-be-set-before-private-key-and-certificate-can-be-generated=L'ID de l'entitat s'ha de definir abans de poder generar la clau privada i el certificat.
@@ -58,7 +58,7 @@ new-service-provider=Nou proveïdor de serveis
 organization-unit=Unitat d'organització
 persistent=Persistent
 please-create-a-signing-credential-before-enabling=Creeu una credencial de signatura abans d'habilitar.
-please-create-an-encryption-credential-if-you-want-assertions-encrypted=Si us plau, crear una credencial de xifrat si voleu afirmacions xifrats. (Automatic Translation)
+please-create-an-encryption-credential-if-you-want-assertions-encrypted=Creeu una credencial de xifrat si voleu xifrar les assercions.
 please-enter-a-unique-identity-provider-entity-id=Introduïu un ID d'entitat de proveïdor d'identitat única.
 please-enter-a-unique-service-provider-entity-id=Introduïu un ID d'entitat de proveïdor de serveis únic.
 please-enter-a-valid-certificate-validity=Introduïu una validesa de certificat vàlida.
