--- a/modules/private/apps/saml/saml-web/src/main/resources/content/Language_es.properties
+++ b/modules/private/apps/saml/saml-web/src/main/resources/content/Language_es.properties
@@ -1,6 +1,6 @@
 add-identity-provider=Añadir proveedor de identidades
 add-service-provider=Añadir proveedor de servicios
-are-you-sure-you-want-to-delete-this-certificate-from-the-keystore=¿Está seguro que desea eliminar esta certificado desde el almacén de claves? (Automatic Translation)
+are-you-sure-you-want-to-delete-this-certificate-from-the-keystore=¿Está seguro de que quiere eliminar este certificado del almacén de claves?
 assertion-lifetime=Duración de aserción
 assertion-lifetime-help=Especifique la duración de aserción en segundos.
 attribute-mapping=Asignación de atributos
@@ -20,11 +20,11 @@ certificate-needs-auth=Una credencial que coincide con un alias que ya existe en
 certificate-url=URL de certificado
 common-name=Nombre común
 create-certificate=Crear certificado
-delete-certificate=Eliminar certificado (Automatic Translation)
+delete-certificate=Eliminar certificado
 download-certificate=Descargar certificado
 dsa=DSA
 encrypted=Cifrado
-encryption-certificate-and-private-key=Certificado de cifrado y clave privada (Automatic Translation)
+encryption-certificate-and-private-key=Certificado de cifrado y clave privada
 entity=Entidad
 entity-id-help=ID de entidad es un identificador único que puede tener 1024 caracteres de longitud como máximo.
 entity-id-must-be-set-before-private-key-and-certificate-can-be-generated=Es necesario establecer el ID de entidad antes de poder generar una clave privada y un certificado.
@@ -58,7 +58,7 @@ new-service-provider=Nuevo proveedor de servicios
 organization-unit=Unidad de organización
 persistent=Persistente
 please-create-a-signing-credential-before-enabling=Cree una credencial de firma antes de habilitarlo.
-please-create-an-encryption-credential-if-you-want-assertions-encrypted=Por favor cree una credencial de cifrado si desea afirmaciones cifradas. (Automatic Translation)
+please-create-an-encryption-credential-if-you-want-assertions-encrypted=Cree una credencial de cifrado si quiere cifrar las aserciones.
 please-enter-a-unique-identity-provider-entity-id=Especifique un ID de entidad de proveedor de identidades único.
 please-enter-a-unique-service-provider-entity-id=Especifique un ID de entidad de proveedor de servicios único.
 please-enter-a-valid-certificate-validity=Especifique una validez de certificado válida.
