--- a/modules/private/apps/saml/saml-web/src/main/resources/content/Language_fi.properties
+++ b/modules/private/apps/saml/saml-web/src/main/resources/content/Language_fi.properties
@@ -1,6 +1,6 @@
 add-identity-provider=Lisää Identiteetin Tarjoaja
 add-service-provider=Lisää Palveluntarjoaja
-are-you-sure-you-want-to-delete-this-certificate-from-the-keystore=Are you sure you want to delete this certificate from the keystore? (Automatic Copy)
+are-you-sure-you-want-to-delete-this-certificate-from-the-keystore=Oletko varma, että haluat poistaa tämän varmenteen keystoresta?
 assertion-lifetime=Väitteen Käyttöikä
 assertion-lifetime-help=Syötä väitteen käyttöikä sekunteina.
 attribute-mapping=Määritteiden Vastinmääritys
@@ -20,11 +20,11 @@ certificate-needs-auth=Valtuutus vastaavalla aliaksella on jo SAML-keystoressa, 
 certificate-url=Varmenteen URL
 common-name=Yleinen Nimi
 create-certificate=Luo Varmenne
-delete-certificate=Delete Certificate (Automatic Copy)
+delete-certificate=Poista Varmenne
 download-certificate=Lataa Varmenne
 dsa=DSA
 encrypted=Salattu
-encryption-certificate-and-private-key=Encryption Certificate and Private Key (Automatic Copy)
+encryption-certificate-and-private-key=Salausvarmenne ja Yksityinen Avain
 entity=Yksikkö
 entity-id-help=Merkinnän tunnus on yksikäsitteinen tunniste, joka voi olla enintään 1024 merkkiä pitkä.
 entity-id-must-be-set-before-private-key-and-certificate-can-be-generated=Entiteetin tunnus on määritettävä ennen kui nyksityisen avaimen ja sertifikaatin voi luoda.
@@ -58,7 +58,7 @@ new-service-provider=Uusi Palveluntarjoaja
 organization-unit=Organisaatioyksikkö
 persistent=Jatkuva
 please-create-a-signing-credential-before-enabling=Luo allekirjoitusvarmenne ennen käyttöönottoa.
-please-create-an-encryption-credential-if-you-want-assertions-encrypted=Please create an encryption credential if you want assertions encrypted. (Automatic Copy)
+please-create-an-encryption-credential-if-you-want-assertions-encrypted=Luo salausvarmenne, jos haluat, että väitteet salataan.
 please-enter-a-unique-identity-provider-entity-id=Syötä yksikäsitteinen identiteetin tarjoajan entiteettitunnus.
 please-enter-a-unique-service-provider-entity-id=Syötä yksikäsitteinen palveluntarjoajan entiteettitunnus.
 please-enter-a-valid-certificate-validity=Syötä kelvollinen varmenteen voimassaolo.
