--- a/modules/private/apps/saml/saml-web/src/main/resources/content/Language_nl.properties
+++ b/modules/private/apps/saml/saml-web/src/main/resources/content/Language_nl.properties
@@ -1,6 +1,6 @@
 add-identity-provider=Identiteitsprovider toevoegen
 add-service-provider=Serviceprovider toevoegen
-are-you-sure-you-want-to-delete-this-certificate-from-the-keystore=Are you sure you want to delete this certificate from the keystore? (Automatic Copy)
+are-you-sure-you-want-to-delete-this-certificate-from-the-keystore=Weet u zeker dat u dit certificaat wilt verwijderen uit de keystore?
 assertion-lifetime=Levensduur bewering
 assertion-lifetime-help=Voer de levensduur van de bewering in seconden in.
 attribute-mapping=Toewijzing kenmerk
@@ -20,11 +20,11 @@ certificate-needs-auth=Er bestaat al een legitimatie met bijbehorende alias in d
 certificate-url=URL certificaat
 common-name=Algemene naam
 create-certificate=Certificaat maken
-delete-certificate=Delete Certificate (Automatic Copy)
+delete-certificate=Certificaat verwijderen
 download-certificate=Certificaat downloaden
 dsa=DSA
 encrypted=Gecodeerd
-encryption-certificate-and-private-key=Encryption Certificate and Private Key (Automatic Copy)
+encryption-certificate-and-private-key=Versleutelingscertificaat en private sleutel
 entity=Entiteit
 entity-id-help=De entiteit-ID is een unieke ID die tot 1.024 tekens lang kan zijn.
 entity-id-must-be-set-before-private-key-and-certificate-can-be-generated=De entiteit-ID moet worden ingesteld voordat de private sleutel en het certificaat kunnen worden gegenereerd.
@@ -58,7 +58,7 @@ new-service-provider=Nieuwe serviceprovider
 organization-unit=Organisatie-eenheid
 persistent=Persistent
 please-create-a-signing-credential-before-enabling=Maak een ondertekeningslegitimatie voorafgaand aan het inschakelen.
-please-create-an-encryption-credential-if-you-want-assertions-encrypted=Please create an encryption credential if you want assertions encrypted. (Automatic Copy)
+please-create-an-encryption-credential-if-you-want-assertions-encrypted=Maak een versleutelingslegitimatie om uw bevestigingen te versleutelen.
 please-enter-a-unique-identity-provider-entity-id=Voer een unieke entiteit-ID in voor de identiteitsprovider.
 please-enter-a-unique-service-provider-entity-id=Voer een unieke entiteit-ID in voor de serviceprovider.
 please-enter-a-valid-certificate-validity=Voer een geldige geldigheidsduur in voor het certificaat.
