--- a/modules/private/apps/saml/saml-web/src/main/resources/content/Language_sv.properties
+++ b/modules/private/apps/saml/saml-web/src/main/resources/content/Language_sv.properties
@@ -1,6 +1,6 @@
 add-identity-provider=Lägg till identitetsleverantör
 add-service-provider=Lägg till tjänstleverantör
-are-you-sure-you-want-to-delete-this-certificate-from-the-keystore=Are you sure you want to delete this certificate from the keystore? (Automatic Copy)
+are-you-sure-you-want-to-delete-this-certificate-from-the-keystore=Vill du verkligen ta bort det här certifikatet från nyckellagret?
 assertion-lifetime=Livstid för kontroll
 assertion-lifetime-help=Ange livstid för kontroll i sekunder.
 attribute-mapping=Attributmappning
@@ -20,11 +20,11 @@ certificate-needs-auth=Det finns redan ett matchande alias i SAML-nyckellagret, 
 certificate-url=Certifikat-URL
 common-name=Vanligt namn
 create-certificate=Skapa certifikat
-delete-certificate=Delete Certificate (Automatic Copy)
+delete-certificate=Ta bort certifikat
 download-certificate=Ladda ned certifikat
 dsa=DSA
 encrypted=Krypterad
-encryption-certificate-and-private-key=Encryption Certificate and Private Key (Automatic Copy)
+encryption-certificate-and-private-key=Krypteringscertifikat och privat nyckel
 entity=Enhet
 entity-id-help=Enhets-ID är en unik identifierare som kan bestå av 1024 tecken.
 entity-id-must-be-set-before-private-key-and-certificate-can-be-generated=Enhets-ID måste anges innan privat nyckel och certifikat kan genereras.
@@ -58,7 +58,7 @@ new-service-provider=Ny tjänstleverantör
 organization-unit=Organisationsenhet
 persistent=Beständig
 please-create-a-signing-credential-before-enabling=Skapa en signering av autentiseringsuppgifter innan du aktiverar.
-please-create-an-encryption-credential-if-you-want-assertions-encrypted=Please create an encryption credential if you want assertions encrypted. (Automatic Copy)
+please-create-an-encryption-credential-if-you-want-assertions-encrypted=Skapa en krypteringsbehörighet om du vill ha behörigheter krypterade.
 please-enter-a-unique-identity-provider-entity-id=Ange ett unikt enhets-ID för identitetsleverantör.
 please-enter-a-unique-service-provider-entity-id=Ange ett unikt enhets-ID för tjänstleverantör.
 please-enter-a-valid-certificate-validity=Ange en giltig certifikatgiltighet.
