--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_pt_BR.properties
@@ -1,21 +1,21 @@
-a-duration-time-is-required=É necessário um tempo de duração. (Automatic Translation)
-a-name-is-required=Um nome é necessário. (Automatic Translation)
-an-sla-with-the-same-name-already-exists=Um SLA com o mesmo nome já existe. (Automatic Translation)
+a-duration-time-is-required=Tempo de duração necessário.
+a-name-is-required=Nome necessário.
+an-sla-with-the-same-name-already-exists=Um SLA com o mesmo nome já existe.
 entries=Entradas
 items=Itens
-metrics=Métricas de (Automatic Translation)
+metrics=Métricas
 next=Próximo
-no-current-metrics=Não há métricas atuais (Automatic Translation)
-no-results-were-found=Não foram encontrados resultados. (Automatic Translation)
+no-current-metrics=Nenhuma métrica atual
+no-results-were-found=Nenhum resultado foi encontrado.
 on-time=No prazo
-once-there-are-active-processes-metrics-will-appear-here=Uma vez que existem processos ativos, métricas aparecerá aqui. (Automatic Translation)
+once-there-are-active-processes-metrics-will-appear-here=Quando houver processos ativos, as métricas aparecerão aqui.
 open-processes-summary=Resumo dos processos abertos
 overdue=Em atraso
 previous=Anterior
 process-name=Nome do processo
-search-for=Procurar por... (Automatic Translation)
+search-for=Procurar por...
 showing=Mostrando
 showing-x-to-x-of-x-entries=Mostrando {0} a {1} de {2} entradas.
 total-open=Total aberto
-x-item={0} Item (Automatic Copy)
-x-items={0} Items (Automatic Copy)
+x-item={0} Item
+x-items={0} Itens
