--- a/modules/private/apps/saml/saml-web/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/private/apps/saml/saml-web/src/main/resources/content/Language_zh_CN.properties
@@ -1,6 +1,6 @@
 add-identity-provider=添加标识提供程序 (Automatic Translation)
 add-service-provider=添加服务提供商
-are-you-sure-you-want-to-delete-this-certificate-from-the-keystore=确实要从密钥库中删除此证书吗？ (Automatic Translation)
+are-you-sure-you-want-to-delete-this-certificate-from-the-keystore=确定要从 Keystore 中删除此证书吗？
 assertion-lifetime=断言生存期
 assertion-lifetime-help=输入断言生存期（单位：秒）。
 attribute-mapping=属性映射
@@ -20,11 +20,11 @@ certificate-needs-auth=具有匹配别名的凭据在 SAML 密钥库中已存在
 certificate-url=证书 URL
 common-name=公用名
 create-certificate=创建证书
-delete-certificate=删除证书 (Automatic Translation)
+delete-certificate=删除证书
 download-certificate=下载证书
 dsa=DSA
 encrypted=加密
-encryption-certificate-and-private-key=加密证书和私钥 (Automatic Translation)
+encryption-certificate-and-private-key=加密证书和私钥
 entity=实体
 entity-id-help=实体 ID 是一个唯一标识符，最大长度为 1024 个字符。
 entity-id-must-be-set-before-private-key-and-certificate-can-be-generated=必须首先设置实体 ID，然后才能生成私钥和证书。
@@ -58,7 +58,7 @@ new-service-provider=新服务提供商
 organization-unit=组织单位
 persistent=持续
 please-create-a-signing-credential-before-enabling=请在启用之前创建签名凭据。
-please-create-an-encryption-credential-if-you-want-assertions-encrypted=如果要加密断言, 请创建加密凭据。 (Automatic Translation)
+please-create-an-encryption-credential-if-you-want-assertions-encrypted=如果您想将断言加密，请创建加密凭据。
 please-enter-a-unique-identity-provider-entity-id=请输入唯一的身份提供商实体 ID。
 please-enter-a-unique-service-provider-entity-id=请输入唯一的服务提供商实体 ID。
 please-enter-a-valid-certificate-validity=请键入有效的证书有效期。
