LPS-77699 Update Translations

--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_fr.properties
@@ -1,21 +1,21 @@
-a-duration-time-is-required=Une durée de séjour est nécessaire. (Automatic Translation)
-a-name-is-required=Un nom est requis. (Automatic Translation)
-an-sla-with-the-same-name-already-exists=Un SLA portant le même nom existe déjà. (Automatic Translation)
-entries=Entrées (Automatic Translation)
-items=Éléments (Automatic Translation)
-metrics=Métrique (Automatic Translation)
-next=Prochaine (Automatic Translation)
-no-current-metrics=Aucun paramètres actuels (Automatic Translation)
-no-results-were-found=Été trouvé aucun résultat. (Automatic Translation)
-on-time=À l'heure (Automatic Translation)
-once-there-are-active-processes-metrics-will-appear-here=Une fois qu'il y a des processus actifs, métriques apparaîtra ici. (Automatic Translation)
-open-processes-summary=Résumé de processus ouverts (Automatic Translation)
-overdue=En retard (Automatic Translation)
-previous=Précédent (Automatic Translation)
-process-name=Nom du processus (Automatic Translation)
-search-for=Recherche de... (Automatic Translation)
-showing=Liste (Automatic Translation)
-showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
-total-open=Ouverture totale (Automatic Translation)
-x-item={0} Item (Automatic Copy)
-x-items={0} Items (Automatic Copy)
+a-duration-time-is-required=Une durée est requise.
+a-name-is-required=Un nom est requis.
+an-sla-with-the-same-name-already-exists=Un SLA porte déjà ce nom.
+entries=Entrées
+items=Articles
+metrics=Métriques
+next=Suivant
+no-current-metrics=Aucune métrique actuelle
+no-results-were-found=Aucun résultat trouvé.
+on-time=À temps
+once-there-are-active-processes-metrics-will-appear-here=Dès que des processus sont actifs, les métriques apparaissent ici.
+open-processes-summary=Résumé des processus ouverts
+overdue=En retard
+previous=Précédent
+process-name=Nom du processus
+search-for=Rechercher...
+showing=Affichage
+showing-x-to-x-of-x-entries=Affichage de {0} à {1} entrées sur {2}.
+total-open=Total ouvert
+x-item={0} Article
+x-items={0} Articles
