--- a/modules/private/apps/saml/saml-web/src/main/resources/content/Language_fr.properties
+++ b/modules/private/apps/saml/saml-web/src/main/resources/content/Language_fr.properties
@@ -1,6 +1,6 @@
 add-identity-provider=Ajouter un fournisseur d'identité
 add-service-provider=Ajouter un fournisseur de service
-are-you-sure-you-want-to-delete-this-certificate-from-the-keystore=Êtes-vous sûr de que vouloir supprimer ce certificat dans le fichier de clés ? (Automatic Translation)
+are-you-sure-you-want-to-delete-this-certificate-from-the-keystore=Voulez-vous vraiment supprimer ce certificat du keystore ?
 assertion-lifetime=Longévité des assertions
 assertion-lifetime-help=Saisissez une longévité d'assertion en secondes.
 attribute-mapping=Mappage des attributs
@@ -20,11 +20,11 @@ certificate-needs-auth=Des données de connexion avec alias correspondant qui ex
 certificate-url=URL du certificat
 common-name=Nom ordinaire
 create-certificate=Créer un certificat
-delete-certificate=Supprimer le certificat (Automatic Translation)
+delete-certificate=Supprimer le certificat
 download-certificate=Télécharger le certificat
 dsa=DSA
 encrypted=Chiffré
-encryption-certificate-and-private-key=Certificat de chiffrement et la clé privée (Automatic Translation)
+encryption-certificate-and-private-key=Certificat de chiffrement et clé privée
 entity=Entité
 entity-id-help=L'ID d'entité est un identificateur unique qui peut contenir jusqu'à 1024 caractères.
 entity-id-must-be-set-before-private-key-and-certificate-can-be-generated=L'ID d'entité doit être défini avant que la clé privée et le certificat puissent être générés.
@@ -58,7 +58,7 @@ new-service-provider=Nouveau fournisseur de service
 organization-unit=Unité d'organisation
 persistent=Persistant
 please-create-a-signing-credential-before-enabling=Veuillez créer des données de connexion avant d'activer.
-please-create-an-encryption-credential-if-you-want-assertions-encrypted=Veuillez créer des informations d'identification de chiffrement si vous souhaitez que les assertions cryptées. (Automatic Translation)
+please-create-an-encryption-credential-if-you-want-assertions-encrypted=Veuillez créer des authentifiants de chiffrement si vous voulez des assertions chiffrées.
 please-enter-a-unique-identity-provider-entity-id=Veuillez saisir un ID d'entité de fournisseur d'identité unique.
 please-enter-a-unique-service-provider-entity-id=Veuillez saisir un ID d'entité de fournisseur de service unique.
 please-enter-a-valid-certificate-validity=Veuillez saisir une validité de certificat valide.
